<resources>
    <string name="app_name">PersistenciaDados</string>
    <string name="nome">Nome</string>
    <string name="tratamento">Tratamento</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="salvar_nova_saudacao">Salvar nova saudação</string>
    <string name="exibir_saudacao">Exibir saudação</string>
    <string name="saudacao">Saudacao</string>
</resources>