<?xml version="1.0" encoding="utf-8"?>


    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_seu_nome"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/tratamento"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/input_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:entries="@array/saudacoes"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/salvar_nova_saudacao" />

        <Button
            android:id="@+id/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/exibir_saudacao" />

    </LinearLayout>

</FrameLayout>
